src/objects/Type_of_credit__c.object
<CustomObject>
    <fields>
        <fullName>Condition__c</fullName>
        <description>The condition for obtaining a credit</description>
        <label>Condition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Credits type name</description>
        <label>Name</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <description>Credit term by days</description>
        <label>Term</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Type of credit</label>
    <nameField>
        <label>Type of credit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Types of credits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>